--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
       <img src="../images/PBRec2.png" class="PBRec2">
       <img src="../images/PBlogoD.png" class="PBlogoD">
     </div>
+    <div class="history_block">
+      <div class="history">
+        <ul class="HistWOBullet">
+          <li>Институт цифры открылся в Кемеровском государственном
+          университете в сентябре 2020 года</li>
+          <li>Структурное подразделение университета изначально занималось
+          прикладными исследованиями в области дистанционного
+          зондирования земли</li>
+        </ul>
+      </div>
+    </div>
     <section class="programs">
       <h1>Направления подготовки</h1>
       <h2>Бакалавриат</h2>
