--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         бизнесе
       </div>
     </div>
-    <div class="News">
+    <section class="News">
       <div class="News_block">Новости</div>
-    </div>
-    <div class="Photo_block">
+    </section>
+    <section class="Photo_block">
       <img src="../images/PB1.png" class="PB1">
       <img src="../images/PB2.png" class="PB2">
       <img src="../images/PB3.png" class="PB3">
@@ -47,7 +47,7 @@
       <img src="../images/PBRec1.png" class="PBRec1">
       <img src="../images/PBRec2.png" class="PBRec2">
       <img src="../images/PBlogoD.png" class="PBlogoD">
-    </div>
+    </section>
     <div class="history_block">
       <div class="history">
         <ul class="HistWOBullet">
@@ -59,65 +59,136 @@
         </ul>
       </div>
     </div>
-    <section class="programs">
-      <h1>Направления подготовки</h1>
-      <h2>Бакалавриат</h2>
-      <ul>
-        <li><a href="https://www.kemsu.ru">01.03.02 прикладная математика и информатика</a></li>
-        <li><a href="https://www.kemsu.ru">09.03.03 прикладная информатика</a></li>
-        <li><a href="https://www.kemsu.ru">02.03.02 фундаментальная информатика и информационные технологии</a></li>
-        <li><a href="https://www.kemsu.ru">02.03.03 математическое обеспечение и администрирование информационных систем</a></li>
-      </ul>
-      <h2>Специалитет</h2>
-      <ul>
-        <li><a href="https://www.kemsu.ru">10.05.01 компьютерная безопасность</a></li>
-      </ul>
-      <h2>Магистратура</h2>
-      <ul>
-        <li><a href="https://www.kemsu.ru">09.04.03 прикладная информатика</a></li>
-        <li><a href="https://www.kemsu.ru">02.04.03 математическое обеспечение и администрирование информационных систем</a></li>
-        <li><a href="https://www.kemsu.ru">01.04.021 прикладная математика и информатика</a></li>
-      </ul>
-    </section>
+    <div class="Programs">
+      <div class="AreasOfTraining_Rectangle">
+        <div class="AreasOfTrainig_Title">
+          Направления подготовки
+        </div>
+      </div>
+      <div class="Bachelor_Block">
+        <div class="Bachelor_Title_Block">
+          <div class="Bachelor_Title">
+            Бакалавриат
+          </div>
+        </div>
+        <div class="Block_010302">
+          <div class="Number_010302">
+            01.03.02
+          </div>
+          <div class="Name_010302">
+            <ul class="WOB010302">
+              <li>прикладная математика</li>
+              <li>и информатика</li>
+            </ul>
+          </div>
+          <img src="../images/arrow.png" class="arrow010302">
+        </div>
+        <div class="Block_020302">
+          <div class="Number_020302">
+            02.03.02
+          </div>
+          <div class="Name_020302">
+            <ul class="WOB020302">
+              <li>фундаментальная информатика</li>
+              <li>и информационные технологии</li>
+            </ul>
+          </div>
+          <img src="../images/arrow.png" class="arrow020302">
+        </div>
+        <div class="Block_090303">
+          <div class="Number_090303">
+            09.03.03
+          </div>
+          <div class="Name_090303">
+            <ul class="WOB090303">
+              <li>прикладная</li>
+              <li>информатика</li>
+            </ul>
+          </div>
+          <img src="../images/arrow.png" class="arrow090303">
+        </div>
+        <div class="Block_020303">
+          <div class="Number_020303">
+            02.03.03
+          </div>
+          <div class="Name_020303">
+            <ul class="WOB020303">
+              <li>математическое обеспечение</li>
+              <li>и администрирование информационных систем</li>
+            </ul>
+          </div>
+          <img src="../images/arrow.png" class="arrow020303">
+        </div>
+      </div>
+      <div class="Speciality_Block">
+        <div class="Speciality_Title_Block">
+          <div class="Speciality_Title">
+            Специалитет
+          </div>
+        </div>
+        <div class="Block_100501">
+          <div class="Number_100501">
+            10.05.01
+          </div>
+          <div class="Name_100501">
+            <ul class="WOB100501">
+              <li>компьютерная</li>
+              <li>безопасность</li>
+            </ul>
+          </div>
+          <img src="../images/arrow.png" class="arrow100501">
+        </div>
+      </div>
+      <div class="Magistracy_Block">
+        <div class="Magistracy_Title_Block">
+          <div class="Magistracy_Title">
+            Магистратура
+          </div>
+        </div>
+        <div class="Block_090403">
+          <div class="Number_090403">
+            09.04.03
+          </div>
+          <div class="Name_090403">
+            <ul class="WOB090403">
+              <li>прикладная</li>
+              <li>информатика</li>
+            </ul>
+          </div>
+          <img src="../images/arrow.png" class="arrow090403">
+        </div>
+        <div class="Block_020403">
+          <div class="Number_020403">
+            02.04.03
+          </div>
+          <div class="Name_020403">
+            <ul class="WOB020403">
+              <li>математическое обеспечение</li>
+              <li>и администрирование информационных систем</li>
+            </ul>
+          </div>
+          <img src="../images/arrow.png" class="arrow020403">
+        </div>
+        <div class="Block_0104021">
+          <div class="Number_0104021">
+            01.04.021
+          </div>
+          <div class="Name_0104021">
+            <ul class="WOB0104021">
+              <li>прикладная математика</li>
+              <li>и информатика</li>
+            </ul>
+          </div>
+          <img src="../images/arrow.png" class="arrow0104021">
+        </div>
+      </div>
+    </div>
   </main>
-
+</div>
   <footer>
     <h1>Об институте</h1>
-    <ul>
-      <li><a href="https://www.kemsu.ru">Кафедры</a></li>
-      <li><a href="https://www.kemsu.ru">Ученый совет</a></li>
-      <li><a href="https://www.kemsu.ru">Сведения об образовательной организации</a></li>
-      <li><a href="https://www.kemsu.ru">Новости</a></li>
-    </ul>
-    <h1>Кафедры</h1>
-    <ul>
-     <li><a href="https://www.kemsu.ru">Кафедра прикладной математики</a></li>
-     <li><a href="https://www.kemsu.ru">Кафедра информационной безопасности</a></li>
-     <li><a href="https://www.kemsu.ru">Кафедра цифровых технологий</a></li>
-   </ul>
-   <h1>Студентам</h1>
-    <ul>
-     <li><a href="https://www.kemsu.ru">Кодекс студента</a></li>
-      <li><a href="https://www.kemsu.ru">Студенческий совет</a></li>
-      <li><a href="https://www.kemsu.ru">Социальная поддержка</a></li>
-      <li><a href="https://www.kemsu.ru">Личный кабинет ЭИОС</a></li>
-     <li><a href="https://www.kemsu.ru">Расписание</a></li>
-   </ul>
-   <h1>Абитуриентам</h1>
-   <ul>
-     <li><a href="https://www.kemsu.ru">Бакалавриат</a></li>
-     <li><a href="https://www.kemsu.ru">Специалитет</a></li>
-      <li><a href="https://www.kemsu.ru">Магистратура</a></li>
-   </ul>
-    <h1>Контактная информация</h1>
-   <ul>
-     <li><a>650056 Кемерово</a></li>
-      <li><a>Красная 6, 1322</a></li>
-      <li><a>будни с 9:00 до 16:30</a></li>
-      <li><a href="mailto:edu@i-digit.ru">edu@i-digit.ru</a></li>
-      <li><a>+7 (3842) 63-00-63</a></li>
-    </ul>
-   <img src="images/logofooter.png" alt="Логотипы">
+
+   <img src="images/logofooter.png" alt="Логотипы" class="Logo_footer">
   </footer>
 </div>
 </body>
