--- a/index.html
+++ b/index.html
@@ -7,25 +7,24 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="container">
-  <header>
-    <div class="logo">
-      <img src="images/logo.png" alt="Логотип Института Цифры">
-    </div>
-    <nav>
-     <ul>
-        <li><a href="https://www.kemsu.ru">Об институте</a></li>
-        <li><a href="https://www.kemsu.ru">Абитуриентам</a></li>
-        <li><a href="https://www.kemsu.ru">Студентам</a></li>
-        <li><a href="https://www.kemsu.ru">Расписание</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+  <div class="logo">
+    <img src="images/logo.png" alt="Логотип Института Цифры">
+  </div>
+  <nav>
+    <ul>
+      <li><a href="https://www.kemsu.ru">Об институте</a></li>
+      <li><a href="https://www.kemsu.ru">Абитуриентам</a></li>
+      <li><a href="https://www.kemsu.ru">Студентам</a></li>
+      <li><a href="https://www.kemsu.ru">Расписание</a></li>
+    </ul>
+  </nav>
+</header>
 
-  <main>
-    <p class="slogan">Перспективное IT- образование в Кузбассе</p>
-    <div class="rectangle_about">
-      <div class="about">
+<main>
+  <p class="slogan">Перспективное IT- образование в Кузбассе</p>
+  <div class="rectangle_about">
+    <div class="about">
         Институт цифры Кемеровского
         государственного университета
         ведет подготовку IT-специалистов
@@ -34,161 +33,185 @@
         искусственного интеллекта и
         информационных технологий в
         бизнесе
-      </div>
     </div>
-    <section class="News">
-      <div class="News_block">Новости</div>
-    </section>
-    <section class="Photo_block">
-      <img src="../images/PB1.png" class="PB1">
-      <img src="../images/PB2.png" class="PB2">
-      <img src="../images/PB3.png" class="PB3">
-      <img src="../images/PB4.png" class="PB4">
-      <img src="../images/PBRec1.png" class="PBRec1">
-      <img src="../images/PBRec2.png" class="PBRec2">
-      <img src="../images/PBlogoD.png" class="PBlogoD">
-    </section>
-    <div class="history_block">
-      <div class="history">
-        <ul class="HistWOBullet">
-          <li>Институт цифры открылся в Кемеровском государственном
+  </div>
+  <section class="News">
+    <div class="News_block">Новости</div>
+  </section>
+  <section class="Photo_block">
+    <img src="../images/PB1.png" class="PB1">
+    <img src="../images/PB2.png" class="PB2">
+    <img src="../images/PB3.png" class="PB3">
+    <img src="../images/PB4.png" class="PB4">
+    <img src="../images/PBRec1.png" class="PBRec1">
+    <img src="../images/PBRec2.png" class="PBRec2">
+    <img src="../images/PBlogoD.png" class="PBlogoD">
+  </section>
+  <div class="history_block">
+    <div class="history">
+      <ul class="HistWOBullet">
+        <li>Институт цифры открылся в Кемеровском государственном
           университете в сентябре 2020 года</li>
-          <li>Структурное подразделение университета изначально занималось
+        <li>Структурное подразделение университета изначально занималось
           прикладными исследованиями в области дистанционного
           зондирования земли</li>
+      </ul>
+    </div>
+  </div>
+  <div class="Programs">
+    <div class="AreasOfTraining_Rectangle">
+      <div class="AreasOfTrainig_Title">Направления подготовки</div>
+    </div>
+    <div class="Bachelor_Block">
+      <div class="Bachelor_Title_Block">
+        <div class="Bachelor_Title">Бакалавриат</div>
+      </div>
+      <div class="Block_010302">
+        <div class="Number_010302">01.03.02</div>
+        <div class="Name_010302">
+          <ul class="WOB010302">
+            <li>прикладная математика</li>
+            <li>и информатика</li>
+          </ul>
+        </div>
+        <img src="../images/arrow.png" class="arrow010302">
+      </div>
+      <div class="Block_020302">
+        <div class="Number_020302">02.03.02</div>
+        <div class="Name_020302">
+          <ul class="WOB020302">
+            <li>фундаментальная информатика</li>
+            <li>и информационные технологии</li>
+          </ul>
+        </div><img src="../images/arrow.png" class="arrow020302"></div>
+      <div class="Block_090303">
+        <div class="Number_090303">09.03.03</div>
+        <div class="Name_090303">
+          <ul class="WOB090303">
+            <li>прикладная</li>
+            <li>информатика</li>
+          </ul>
+        </div>
+        <img src="../images/arrow.png" class="arrow090303">
+      </div>
+      <div class="Block_020303">
+        <div class="Number_020303">02.03.03</div>
+        <div class="Name_020303">
+          <ul class="WOB020303">
+            <li>математическое обеспечение</li>
+            <li>и администрирование информационных систем</li>
+          </ul>
+        </div>
+        <img src="../images/arrow.png" class="arrow020303">
+      </div>
+    </div>
+    <div class="Speciality_Block">
+      <div class="Speciality_Title_Block">
+        <div class="Speciality_Title">Специалитет</div>
+      </div>
+      <div class="Block_100501">
+        <div class="Number_100501">10.05.01</div>
+        <div class="Name_100501">
+          <ul class="WOB100501">
+            <li>компьютерная</li>
+            <li>безопасность</li>
+          </ul>
+        </div>
+        <img src="../images/arrow.png" class="arrow100501"></div>
+    </div>
+    <div class="Magistracy_Block">
+      <div class="Magistracy_Title_Block">
+        <div class="Magistracy_Title">Магистратура</div>
+      </div>
+      <div class="Block_090403">
+        <div class="Number_090403">09.04.03</div>
+        <div class="Name_090403">
+          <ul class="WOB090403">
+            <li>прикладная</li>
+            <li>информатика</li>
+          </ul>
+        </div>
+        <img src="../images/arrow.png" class="arrow090403"></div>
+      <div class="Block_020403">
+        <div class="Number_020403">02.04.03</div>
+        <div class="Name_020403">
+          <ul class="WOB020403">
+            <li>математическое обеспечение</li>
+            <li>и администрирование информационных систем</li>
+          </ul>
+        </div>
+        <img src="../images/arrow.png" class="arrow020403"></div>
+      <div class="Block_0104021">
+        <div class="Number_0104021">01.04.021</div>
+        <div class="Name_0104021">
+          <ul class="WOB0104021">
+            <li>прикладная математика</li>
+            <li>и информатика</li>
+          </ul>
+        </div>
+        <img src="../images/arrow.png" class="arrow0104021">
+      </div>
+    </div>
+  </div>
+</main>
+<div class="Footer_cont">
+  <footer>
+    <div class="Column1">
+      <div class="AboutInstituteTitle">Об институте</div>
+      <div class="AboutInstitute">
+        <ul class="AboutInstituteUL">
+          <li><a href="http://www.kemsu.ru">Ученый совет</a></li>
+          <li><a href="http://www.kemsu.ru">Сведения об организации</a></li>
+          <li><a href="http://www.kemsu.ru">Новости</a></li>
         </ul>
       </div>
     </div>
-    <div class="Programs">
-      <div class="AreasOfTraining_Rectangle">
-        <div class="AreasOfTrainig_Title">
-          Направления подготовки
-        </div>
-      </div>
-      <div class="Bachelor_Block">
-        <div class="Bachelor_Title_Block">
-          <div class="Bachelor_Title">
-            Бакалавриат
-          </div>
-        </div>
-        <div class="Block_010302">
-          <div class="Number_010302">
-            01.03.02
-          </div>
-          <div class="Name_010302">
-            <ul class="WOB010302">
-              <li>прикладная математика</li>
-              <li>и информатика</li>
-            </ul>
-          </div>
-          <img src="../images/arrow.png" class="arrow010302">
-        </div>
-        <div class="Block_020302">
-          <div class="Number_020302">
-            02.03.02
-          </div>
-          <div class="Name_020302">
-            <ul class="WOB020302">
-              <li>фундаментальная информатика</li>
-              <li>и информационные технологии</li>
-            </ul>
-          </div>
-          <img src="../images/arrow.png" class="arrow020302">
-        </div>
-        <div class="Block_090303">
-          <div class="Number_090303">
-            09.03.03
-          </div>
-          <div class="Name_090303">
-            <ul class="WOB090303">
-              <li>прикладная</li>
-              <li>информатика</li>
-            </ul>
-          </div>
-          <img src="../images/arrow.png" class="arrow090303">
-        </div>
-        <div class="Block_020303">
-          <div class="Number_020303">
-            02.03.03
-          </div>
-          <div class="Name_020303">
-            <ul class="WOB020303">
-              <li>математическое обеспечение</li>
-              <li>и администрирование информационных систем</li>
-            </ul>
-          </div>
-          <img src="../images/arrow.png" class="arrow020303">
-        </div>
-      </div>
-      <div class="Speciality_Block">
-        <div class="Speciality_Title_Block">
-          <div class="Speciality_Title">
-            Специалитет
-          </div>
-        </div>
-        <div class="Block_100501">
-          <div class="Number_100501">
-            10.05.01
-          </div>
-          <div class="Name_100501">
-            <ul class="WOB100501">
-              <li>компьютерная</li>
-              <li>безопасность</li>
-            </ul>
-          </div>
-          <img src="../images/arrow.png" class="arrow100501">
-        </div>
-      </div>
-      <div class="Magistracy_Block">
-        <div class="Magistracy_Title_Block">
-          <div class="Magistracy_Title">
-            Магистратура
-          </div>
-        </div>
-        <div class="Block_090403">
-          <div class="Number_090403">
-            09.04.03
-          </div>
-          <div class="Name_090403">
-            <ul class="WOB090403">
-              <li>прикладная</li>
-              <li>информатика</li>
-            </ul>
-          </div>
-          <img src="../images/arrow.png" class="arrow090403">
-        </div>
-        <div class="Block_020403">
-          <div class="Number_020403">
-            02.04.03
-          </div>
-          <div class="Name_020403">
-            <ul class="WOB020403">
-              <li>математическое обеспечение</li>
-              <li>и администрирование информационных систем</li>
-            </ul>
-          </div>
-          <img src="../images/arrow.png" class="arrow020403">
-        </div>
-        <div class="Block_0104021">
-          <div class="Number_0104021">
-            01.04.021
-          </div>
-          <div class="Name_0104021">
-            <ul class="WOB0104021">
-              <li>прикладная математика</li>
-              <li>и информатика</li>
-            </ul>
-          </div>
-          <img src="../images/arrow.png" class="arrow0104021">
-        </div>
+    <div class="Column2">
+      <div class="DepartmentsTitle">Кафедры</div>
+      <div class="Departments">
+        <ul class="DepartmentsUL">
+          <li><a href="http://www.kemsu.ru">Кафедра прикладной математики</a></li>
+          <li><a href="http://www.kemsu.ru">Кафедра информационной безопасности</a></li>
+          <li><a href="http://www.kemsu.ru">Кафедра цифровых технологий</a></li>
+        </ul>
       </div>
     </div>
-  </main>
-</div>
-  <footer>
-    <h1>Об институте</h1>
-
-   <img src="images/logofooter.png" alt="Логотипы" class="Logo_footer">
+    <div class="Column3">
+      <div class="ForStudentsTitle">Студентам</div>
+      <div class="ForStudents">
+        <ul class="ForStudentsUL">
+          <li><a href="http://www.kemsu.ru">Кодекс студента</a></li>
+          <li><a href="http://www.kemsu.ru">Студенческий совет</a></li>
+          <li><a href="http://www.kemsu.ru">Социальная поддержка</a></li>
+          <li><a href="http://www.kemsu.ru">Личный кабинет ЭИОС</a></li>
+          <li><a href="http://www.kemsu.ru">Расписание</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="Column4">
+      <div class="ForAbiturTitle">Абитуриентам</div>
+      <div class="ForAbitur">
+        <ul class="ForAbiturUL">
+          <li><a href="http://www.kemsu.ru">Бакалавриат</a></li>
+          <li><a href="http://www.kemsu.ru">Специалитет</a></li>
+          <li><a href="http://www.kemsu.ru">Магистратура</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="Column5">
+      <ul class="Contacts">
+        <li>650056, Кемерово</li>
+        <li>Красная 6, 1322</li>
+        <li>будни с 9:00 до 16:30</li>
+        <li><a href="mailto:edu@i-digit.ru">edu@i-digit.ru</a></li>
+        <li><a href="tel:+73842630063">+7 (3842) 63-00-63</a></li>
+      </ul>
+    </div>
+    <div class="Logos">
+      <a href="http://www.kemsu.ru"><img src="../images/Kemerovo_State_University.png" class="KemSU"></a>
+      <img src="../images/Institute_Digit.png" class="InstituteDigit">
+      <a href="https://minobrnauki.gov.ru/"><img src="../images/Ministy_of_Science_and_Higher_Education.png" class="MinOfSciAndHiEdu"></a>
+    </div>
   </footer>
 </div>
 </body>
