--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
     <div class="News_block">Новости</div>
   </section>
   <section class="Photo_block">
-    <img src="../images/PB1.png" class="PB1">
-    <img src="../images/PB2.png" class="PB2">
-    <img src="../images/PB3.png" class="PB3">
-    <img src="../images/PB4.png" class="PB4">
-    <img src="../images/PBRec1.png" class="PBRec1">
-    <img src="../images/PBRec2.png" class="PBRec2">
-    <img src="../images/PBlogoD.png" class="PBlogoD">
+    <img src="/images/PB1.png" class="PB1">
+    <img src="/images/PB2.png" class="PB2">
+    <img src="/images/PB3.png" class="PB3">
+    <img src="/images/PB4.png" class="PB4">
+    <img src="/images/PBRec1.png" class="PBRec1">
+    <img src="/images/PBRec2.png" class="PBRec2">
+    <img src="/images/PBlogoD.png" class="PBlogoD">
   </section>
   <div class="history_block">
     <div class="history">
@@ -74,7 +74,7 @@
             <li>и информатика</li>
           </ul>
         </div>
-        <img src="../images/arrow.png" class="arrow010302">
+        <img src="/images/arrow.png" class="arrow010302">
       </div>
       <div class="Block_020302">
         <div class="Number_020302">02.03.02</div>
@@ -92,7 +92,7 @@
             <li>информатика</li>
           </ul>
         </div>
-        <img src="../images/arrow.png" class="arrow090303">
+        <img src="/images/arrow.png" class="arrow090303">
       </div>
       <div class="Block_020303">
         <div class="Number_020303">02.03.03</div>
@@ -102,7 +102,7 @@
             <li>и администрирование информационных систем</li>
           </ul>
         </div>
-        <img src="../images/arrow.png" class="arrow020303">
+        <img src="/images/arrow.png" class="arrow020303">
       </div>
     </div>
     <div class="Speciality_Block">
@@ -117,7 +117,7 @@
             <li>безопасность</li>
           </ul>
         </div>
-        <img src="../images/arrow.png" class="arrow100501"></div>
+        <img src="/images/arrow.png" class="arrow100501"></div>
     </div>
     <div class="Magistracy_Block">
       <div class="Magistracy_Title_Block">
@@ -149,7 +149,7 @@
             <li>и информатика</li>
           </ul>
         </div>
-        <img src="../images/arrow.png" class="arrow0104021">
+        <img src="/images/arrow.png" class="arrow0104021">
       </div>
     </div>
   </div>
@@ -209,7 +209,7 @@
     </div>
     <div class="Logos">
       <a href="http://www.kemsu.ru"><img src="../images/Kemerovo_State_University.png" class="KemSU"></a>
-      <img src="../images/Institute_Digit.png" class="InstituteDigit">
+      <img src="/images/Institute_Digit.png" class="InstituteDigit">
       <a href="https://minobrnauki.gov.ru/"><img src="../images/Ministy_of_Science_and_Higher_Education.png" class="MinOfSciAndHiEdu"></a>
     </div>
   </footer>
