--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <div class="News_block">Новости</div>
   </section>
   <section class="Photo_block">
-    <img src="images/PB1.png" class="PB1">
-    <img src="images/PB2.png" class="PB2">
-    <img src="images/PB3.png" class="PB3">
-    <img src="images/PB4.png" class="PB4">
+    <img src="images/PB1.png" alt="pb1" class="PB1">
+    <img src="images/PB2.png" alt="pb2" class="PB2">
+    <img src="images/PB1.png" alt="pb3" class="PB3">
+    <img src="images/PB4.png" alt="pb4" class="PB4">
     <img src="images/PBRec1.png" class="PBRec1">
     <img src="images/PBRec2.png" class="PBRec2">
     <img src="images/PBlogoD.png" class="PBlogoD">
